<resources>
    <string name="app_name">MyTweet</string>
    <string name="Welcome_txt_id">Welcome to MyTweet</string>
    <string name="button_welcome_signup_id">Sign Up</string>
    <string name="button_welcome_login_id">Login</string>
    <string name="Welcome_txtsub_id">See what is happening in the great WIT world right now</string>
    <string name="textview_login_id">Email</string>
    <string name="textview_login_password_id">Passsword</string>
    <string name="button_login_id">Login</string>
    <string name="textview_Login_banner_id">Login</string>
    <string name="textview_signup_banner_id">Sign Up</string>
    <string name="textview_signup_fname_id">First name</string>
    <string name="textview_signup_lname_id">Last name</string>
    <string name="textview_signup_email_id">Email</string>
    <string name="textview_signup_password_id">Password</string>
    <string name="button_signup_view_id">Sign Up</string>
    <string name="tweetButton">Tweet</string>
    <string name="tweetHint">What\'s in your mind?</string>

    <string name="selectContact">Select Contact</string>
    <string name="emailTweet">Email Tweet</string>

    <string name="settings">Settings</string>
    <string name="following">Following</string>
    <string name="clear">Clear</string>
    <string name="new_tweet">New Tweet</string>
    <string name="registration_date"> </string>

    <string name="tweet_report_subject">The following is a tweet</string>
    <string name="delete_tweet">Delete Tweet</string>

    <string name="username_summary">Please enter your user name</string>
    <string name="username">Username</string>
    <string name="password_summary">You may set your password here</string>
    <string name="password">Password</string>
    <string name="nmr_tweets">Configure Downloads</string>
    <string name="nmr_tweets_summary">How many Tweets to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="refresh">Refresh Tweets List</string>
    <string name="followingButton">Follow</string>
    <string name="followingTitle">Following</string>
    <string name="unfollow">Unfollow</string>
    <string name="refresh_interval_preference_key">refresh_interval</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_photo">Save Photo</string>
</resources>
