<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/twitter"
    android:scaleType="centerCrop">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectContact"
        android:id="@+id/selectContact"
        android:onClick=""
        android:layout_gravity="right"
        android:layout_above="@+id/emailTweet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:inputType="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tweetText"
        android:textSize="25sp"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:textStyle="bold|italic"
        android:hint="@string/tweetHint"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/tweetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailTweet"
        android:id="@+id/emailTweet"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/characterCount"
        android:hint="140"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:layout_alignTop="@+id/tweetButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/tweetButton"
        android:layout_toLeftOf="@+id/tweetButton"
        android:layout_toStartOf="@+id/tweetButton"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="100dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registration_date"
        android:layout_above="@+id/selectContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:text="@string/followingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweetButton"
        android:id="@+id/followingButton"
        android:onClick="followingPressed"
        android:layout_alignRight="@+id/tweetButton"
        android:layout_alignEnd="@+id/tweetButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweetButton"
        android:id="@+id/tweetButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="31dp"
        android:onClick="tweetPressed"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/registration_date"
        android:layout_alignEnd="@+id/registration_date" />

    <Button
        android:text="@string/unfollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tweetText"
        android:layout_alignRight="@+id/followingButton"
        android:layout_alignEnd="@+id/followingButton"
        android:onClick="unfollowPressed"
        android:id="@+id/unfollowButton" />

</RelativeLayout>